RESOLVED FIXED75919
Error handling : in ISO8601 timezone
https://bugs.webkit.org/show_bug.cgi?id=75919
Summary Error handling : in ISO8601 timezone
Gavin Barraclough
Reported 2012-01-09 17:41:31 PST
We forget to increment the string position.
Attachments
Fix (6.36 KB, patch)
2012-01-09 17:43 PST, Gavin Barraclough
sam: review+
Gavin Barraclough
Comment 1 2012-01-09 17:43:54 PST
Gavin Barraclough
Comment 2 2012-01-09 18:03:53 PST
Fixed in r104527
Note You need to log in before you can comment on or make changes to this bug.