Error handling : in ISO8601 timezone https://bugs.webkit.org/show_bug.cgi?id=75919

Reviewed by Sam Weinig.

Source/JavaScriptCore:

* wtf/DateMath.cpp:
(WTF::parseDateFromNullTerminatedCharacters):
    - need to increment the string position.

LayoutTests:

* fast/js/date-parse-test-expected.txt:
* fast/js/script-tests/date-parse-test.js:
    - added test cases.



Canonical link: https://commits.webkit.org/92708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104527 268f45cc-cd09-0410-ab3c-d52691b4dbfc